--- a/style.css
+++ b/style.css
@@ -2,4 +2,13 @@ html {
     height: 100%;
     width: 100%;
   }
-  
+  h1 {
+    color: blueviolet;
+  }
+  .azul{
+    color: blue;
+  }
+
+  #rojo{
+    color: rgb(229, 14, 14);
+  }
